@@ -35,3 +35,4 @@ tip_of_day_33= _ "Units can gain After Maximum Level Advancements
 Gaining an AMLA becomes progressively harder for each AMLA the unit
 receives, however. Thus, it is often more useful to try to advance
 your lower level units."
+tip_of_day_34= _ "You can send the Wesnoth Project an anonymous summary of your progress using the Help Wesnoth button.  This information is vital so we can adjust campaign difficulty."
