@@ -22,6 +22,7 @@ struct game_state;
 class config;
 struct game_data;
 class CVideo;
+class upload_log;
 
 enum io_type_t {
 	IO_NONE,
@@ -31,6 +32,7 @@ enum io_type_t {
 
 LEVEL_RESULT play_game(display& disp, game_state& state, const config& game_config,
 		const game_data& units_data, CVideo& video,
+		upload_log &log,
 		io_type_t io_type=IO_NONE);
 
 
